<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:paddingBottom="110dp"
        android:text="@string/contact"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/city_state_zip"
        android:layout_alignStart="@+id/contact"
        android:layout_alignLeft="@+id/contact"
        android:paddingBottom="120dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city_state_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/contact"
        android:layout_alignLeft="@+id/contact"
        android:paddingBottom="95dp"
        android:text="@string/city_state_zip"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/contact"
        android:layout_alignLeft="@id/contact"
        android:paddingBottom="60dp"
        android:text="@string/phone"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/care"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/care" />

    <TextView
        android:id="@+id/doctorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/practice"
        android:layout_alignLeft="@id/practice"
        android:layout_marginTop="29dp"
        android:paddingBottom="160dp"
        android:text="@string/dr_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/practice"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/contact"
        android:layout_alignLeft="@id/contact"
        android:layout_marginTop="61dp"
        android:paddingBottom="125dp"
        android:text="@string/practice"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

   </RelativeLayout>